Just use our document for the doc we call ContentStatesChanged on instead of trying to get it off the content nodes (which may no longer be in a document by this point).  Bug 274736, r+sr=roc, a=shaver